--- a/Example/NotificationContentExtension/Info.plist
+++ b/Example/NotificationContentExtension/Info.plist
@@ -11,7 +11,9 @@
 			<key>UNNotificationExtensionDefaultContentHidden</key>
 			<true/>
 			<key>UNNotificationExtensionCategory</key>
-			<string>dailyQuotes</string>
+			<array>
+				<string>dailyQuotes</string>
+			</array>
 			<key>UNNotificationExtensionInitialContentSizeRatio</key>
 			<real>1</real>
 		</dict>
