--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,10 +4,18 @@ platform :ios, '15.0'
 
 target 'McccNotify_Example' do
   pod 'McccNotify', :path => '../'
+  
+  pod 'SnapKit'
 
   target 'McccNotify_Tests' do
     inherit! :search_paths
 
     
   end
+end
+
+
+
+target 'NotificationContentExtension' do
+  pod 'SnapKit'
 end
